--- a/index.html
+++ b/index.html
@@ -14,31 +14,46 @@
           <h3>Back-End Developer</h3>
           <h2>HWANG BOK SIL</h2>
           <img src="img/profilepic.png" alt="profile-pic">
-          <div class="first__profile_div">
-          <span>Email : tlatms0908@gmail.com</span>
-          <span>Blog : <a href="https://velog.io/@sz3728" target="_blank"> velog 바로가기</a></span>
-          <span>GitHub : <a href="https://github.com/hwangboksil" target="_blank"> GitHub 바로가기</a></span>
-        </div>
+            <div class="first__profile_div">
+                <ul>
+                <li><span>Email : tlatms0908@gmail.com</span></li>
+                <li><span><a href="https://velog.io/@sz3728" target="_blank">Blog : Velog 바로가기</a></span></li>
+                <li><span><a href="https://github.com/hwangboksil" target="_blank">GitHub : GitHub 바로가기</a></span></li>
+            </ul>
+            </div>
         </div>
     </div>
 
         <!-- 두번째라인 -->
     <div class="last__ilne">
+        <div id="part1">
         <div class="second__profile">
-          <h3>나를 표현하는 키워드</h3>
-          <span>모험심</span>
-          <span>생각</span>
-          <span>호불호</span>
+          <h3>✔ KEYWORD</h3>
+          <ul>
+          <li><span>모험심</span></li>
+          <li><span>호불호</span></li>
+          <li><span>아이디어</span></li>
+        </ul>
         </div>
         <div class="third__profile">
-            <h3>WORK EXPERIENCE</h3>
+            <h3>✔ WORK EXPERIENCE</h3>
+            <span>- 2017.09 ~ 2021.03 | 담당 업무 : 기계 설계 📐</span>
         </div>
+    </div>
+    <div id="part2">
         <div class="fourth__profile">
-            <h3>싫어하는 것</h3>
+            <h3>✔ INFO</h3>
+            <ul>
+                <li>🧱 레고를 좋아합니다.</li>
+                <li>📚 책을 좋아합니다.</li>
+                <li>🎵 음악 감상을 좋아합니다.</li>
+            </ul>
         </div>
         <div class="fifth__profile">
-            <h3>나는 이런 개발자가 되고 싶다</h3>
+            <h3>✔ I want to be a developer like this.</h3>
+            <span>"떠오른 아이디어쯤 바로 만드는 개발자🔥"</span>
         </div>
+    </div>
     </div>
 </body>
 </html>
