#5. be a developer 내용수정

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="fifth__profile">
             <h3>✔ I want to be a developer like this.</h3>
-            <span>"떠오른 아이디어쯤 바로 만드는 개발자🔥"</span>
+            <span>"🔥떠오른 아이디어쯤 바로 만드는 개발자🔥"</span>
         </div>
     </div>
     </div>
