--- a/index.html
+++ b/index.html
@@ -9,23 +9,20 @@
 </head>
 <body>
     <!-- 첫번째라인 -->
-    <div class="first__ilne">
         <div class="first__profile">
           <h3>Back-End Developer</h3>
           <h2>HWANG BOK SIL</h2>
-          <img src="img/profilepic.png" alt="profile-pic">
-            <div class="first__profile_div">
+          <div class="pic"><a href="">Profile_Pic</a></div>
+            <div class="icons">
                 <ul>
-                <li><span>Email : tlatms0908@gmail.com</span></li>
-                <li><span><a href="https://velog.io/@sz3728" target="_blank">Blog : Velog 바로가기</a></span></li>
-                <li><span><a href="https://github.com/hwangboksil" target="_blank">GitHub : GitHub 바로가기</a></span></li>
+                    <li><a class="velog" href="https://velog.io/@sz3728" target="_blank">Velog 바로가기</a></li>
+                    <li><a class="github" href="https://github.com/hwangboksil" target="_blank">GitHub 바로가기</a></li>
+                    <li><a class="gmail" href="tlatms0908@gmail.com" target="_blank">tlatms0908@gmail.com</a></li>
             </ul>
             </div>
         </div>
-    </div>
 
         <!-- 두번째라인 -->
-    <div class="last__ilne">
         <div id="part1">
         <div class="second__profile">
           <h3>✔ KEYWORD</h3>
@@ -53,7 +50,6 @@
             <h3>✔ I want to be a developer like this.</h3>
             <span>"🔥떠오른 아이디어쯤 바로 만드는 개발자🔥"</span>
         </div>
-    </div>
     </div>
 </body>
 </html>
