--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HWANGBOKSIL | PROFILE</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- 첫번째라인 -->
         <div class="first__profile">
-          <h3>Back-End Developer</h3>
-          <h2>HWANG BOK SIL</h2>
-          <div class="pic"><a href="">Profile_Pic</a></div>
-            <div class="icons">
-                <ul>
-                    <li><a class="velog" href="https://velog.io/@sz3728" target="_blank">Velog 바로가기</a></li>
-                    <li><a class="github" href="https://github.com/hwangboksil" target="_blank">GitHub 바로가기</a></li>
-                    <li><a class="gmail" href="tlatms0908@gmail.com" target="_blank">tlatms0908@gmail.com</a></li>
+          <div class="job">
+            <ul class="job-list">
+                <li>>Wecoder</li>
+                <li>Problem founder</li>
+                <li>Back-End Developer</li>
+                <li>>Wecoder</li> <!-- css에서 Animation 적용 시 부드러움을 위해 처음과 끝을 같게한다. -->
             </ul>
+          </div>
+          <h1>HWANG BOK SIL</h1>
+          <div class="pic"><a href="">Profile_Pic</a></div>
+          <div class="icons">
+                <a class="velog" href="https://velog.io/@sz3728" target="_blank">Velog 바로가기</a>
+                <a class="github" href="https://github.com/hwangboksil" target="_blank">GitHub 바로가기</a>
+                <a class="gmail" href="tlatms0908@gmail.com" target="_blank">tlatms0908@gmail.com</a>
             </div>
         </div>
 
