--- a/index.html
+++ b/index.html
@@ -30,33 +30,63 @@
         </div>
 
         <!-- 두번째라인 -->
-        <div id="part1">
-        <div class="second__profile">
-          <h3>✔ KEYWORD</h3>
-          <ul>
-          <li><span>모험심</span></li>
-          <li><span>호불호</span></li>
-          <li><span>아이디어</span></li>
+        <div class="profile__section">
+        <h2>✔ KEYWORD</h2>
+          <ul class="timeline">
+          <li>
+            <h3>여행</h3>
+            <p>...</p>
+        </li>
+          <li>
+            <h3>낯가림</h3>
+            <p>...</p>
+        </li>
+          <li>
+            <h3>아이디어</h3>
+            <p>...</p>
+        </li>
         </ul>
         </div>
-        <div class="third__profile">
-            <h3>✔ WORK EXPERIENCE</h3>
-            <span>- 2017.09 ~ 2021.03 | 담당 업무 : 기계 설계 📐</span>
+        <div class="profile__section">
+            <h2>✔ LIFE EXPERIENCE</h2>
+            <ul class="timeline"> <!-- 순서없는 리스트 생성 -->
+            <li>
+                <h3>2002</h3>
+                <p>월드컵 4강전</p>
+            </li>
+            <li>
+                <h3>2016</h3>
+                <p>첫 해외여행</p>
+            </li>
+            <li>
+                <h3>2021</h3>
+                <p>자랑스런 21기 Wecoder</p>
+            </li>
+        </ul>
         </div>
-    </div>
-    <div id="part2">
-        <div class="fourth__profile">
-            <h3>✔ INFO</h3>
-            <ul>
-                <li>🧱 레고를 좋아합니다.</li>
-                <li>📚 책을 좋아합니다.</li>
-                <li>🎵 음악 감상을 좋아합니다.</li>
+        <div class="profile__section">
+            <h2>✔ INFO</h2>
+            <ul class="timeline"> <!-- 순서없는 리스트 생성 -->
+                <li>
+                    <h3>🧱 레고를 좋아합니다.</h3>
+                    <p></p>
+                </li>
+                <li>
+                    <h3>📚 책을 좋아합니다.</h3>
+                    <p></p>
+                </li>
+                <li>
+                    <h3>🎵 음악 감상을 좋아합니다.</h3>
+                    <p></p>
+                </li>
             </ul>
         </div>
-        <div class="fifth__profile">
-            <h3>✔ I want to be a developer like this.</h3>
-            <span>"🔥떠오른 아이디어쯤 바로 만드는 개발자🔥"</span>
+        <div class="profile__section">
+            <h2>✔ I want to be a developer like this.</h2>
+            <ul class="timeline"> <!-- 순서없는 리스트 생성 -->
+                <li>
+                    <p>"🔥떠오른 아이디어쯤 바로 만드는 개발자🔥"</p>
+                </li>
         </div>
-    </div>
 </body>
 </html>
