--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
 
         <!-- 두번째라인 -->
+        <div class="secon__profile">
         <div class="profile__section">
         <h2>✔ KEYWORD</h2>
           <ul class="timeline">
@@ -88,5 +89,6 @@
                     <p>"🔥떠오른 아이디어쯤 바로 만드는 개발자🔥"</p>
                 </li>
         </div>
+    </div>
 </body>
 </html>
