--- a/index.html
+++ b/index.html
@@ -32,19 +32,11 @@
         <!-- 두번째라인 -->
         <div class="secon__profile">
         <div class="profile__section">
-        <h2>✔ KEYWORD</h2>
+        <h2>✔ 21기 wecoder</h2>
           <ul class="timeline">
           <li>
-            <h3>여행</h3>
-            <p>...</p>
-        </li>
-          <li>
-            <h3>낯가림</h3>
-            <p>...</p>
-        </li>
-          <li>
-            <h3>아이디어</h3>
-            <p>...</p>
+            <p>평소 무언가를 만드는 것을 좋아했습니다. <br>그날도 아두이노를 통해 만들고 싶은 것이 있어 서치 중 프로그래밍 지식도 필요하단 걸 알고 겉핥기 식으로나마 공부를 시작했고 <br>처음엔 중요치 않게 생각했던 프로그래밍이 나중에 일상이 되어 "노마드 코더"의 챌린지를 했습니다. <br>HTML&CSS만 공부했었고 점점 흥미가 생겼지만 <br> JavaScript를 공부하는 과정에서 많은 시련과 고통이 있었고 <br>그런 시련을 없애고자 "뭐라도 검색하면 답이 나오겠지" 싶어 구글링을 하던 중 정말 운명적으로 만난 "Wecode"였습니다. 시기도 너무 적절하게 21년 5월이 개강이었지만 <br>수강료에 고민을 살짝 하여 커리큘럼과 선배 기수분들의 후기를 보고 마음을 굳혀 상담 일주일 만에 21기 wecoder가 되었습니다.
+            </p>
         </li>
         </ul>
         </div>
@@ -52,21 +44,13 @@
             <h2>✔ LIFE EXPERIENCE</h2>
             <ul class="timeline"> <!-- 순서없는 리스트 생성 -->
             <li>
-                <h3>2002</h3>
-                <p>월드컵 4강전</p>
-            </li>
-            <li>
-                <h3>2016</h3>
-                <p>첫 해외여행</p>
-            </li>
-            <li>
                 <h3>2021</h3>
-                <p>자랑스런 21기 Wecoder</p>
+                <p>21기 Wecoder가 되었고 열심히 공부 중입니다. 아직 많이 부족하고 진도 따라가기 급급하지만 위코드에서 자랑스러운 위 코더가 되어 다시 돌아오겠습니다.</p>
             </li>
         </ul>
         </div>
         <div class="profile__section">
-            <h2>✔ INFO</h2>
+            <h2>✔ 저는..</h2>
             <ul class="timeline"> <!-- 순서없는 리스트 생성 -->
                 <li>
                     <h3>🧱 레고를 좋아합니다.</h3>
@@ -86,7 +70,7 @@
             <h2>✔ I want to be a developer like this.</h2>
             <ul class="timeline"> <!-- 순서없는 리스트 생성 -->
                 <li>
-                    <p>"🔥떠오른 아이디어쯤 바로 만드는 개발자🔥"</p>
+                    <p>"머릿속 상상이 현실이 된다면 얼마나 행복할까?" 아이디어는 많지만 막상 방법과 기술이 부족했습니다. <br>저는 꼭 "🔥떠오른 아이디어쯤 바로 만드는 개발자🔥"가 되어야 겠다고 마음먹었습니다.</p>
                 </li>
         </div>
     </div>
