#12.1 내용 재 수정

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>✔ 21기 wecoder</h2>
           <ul class="timeline">
           <li>
-            <p>평소 무언가를 만드는 것을 좋아했습니다. <br>그날도 아두이노를 통해 만들고 싶은 것이 있어 서치 중 프로그래밍 지식도 필요하단 걸 알고 겉핥기 식으로나마 공부를 시작했고 <br>처음엔 중요치 않게 생각했던 프로그래밍이 나중에 일상이 되어 "노마드 코더"의 챌린지를 했습니다. <br>HTML&CSS만 공부했었고 점점 흥미가 생겼지만 <br> JavaScript를 공부하는 과정에서 많은 시련과 고통이 있었고 <br>그런 시련을 없애고자 "뭐라도 검색하면 답이 나오겠지" 싶어 구글링을 하던 중 정말 운명적으로 만난 "Wecode"였습니다. 시기도 너무 적절하게 21년 5월이 개강이었지만 <br>수강료에 고민을 살짝 하여 커리큘럼과 선배 기수분들의 후기를 보고 마음을 굳혀 상담 일주일 만에 21기 wecoder가 되었습니다.
+            <p>평소 무언가를 만드는 것을 좋아했습니다. <br>그날도 아두이노를 통해 만들고 싶은 것이 있어 서치 중 프로그래밍 지식도 필요하단 걸 알고 겉핥기 식으로나마 공부를 시작했고 <br>처음엔 중요치 않게 생각했던 프로그래밍이 나중에 일상이 되어 '노마드 코더'의 챌린지를 했습니다. <br>HTML&CSS만 공부했었고 점점 흥미가 생겼지만 <br> JavaScript를 공부하는 과정에서 많은 시련과 고통이 있었고 <br>그런 시련을 없애고자 "뭐라도 검색하면 답이 나오겠지" 싶어 구글링을 하던 중 정말 운명적으로 만난 "Wecode"였습니다. 시기도 너무 적절하게 21년 5월이 개강이었지만 <br>수강료에 고민을 살짝 하여 커리큘럼과 선배 기수분들의 후기를 보고 마음을 굳혀 상담 일주일 만에 21기 wecoder가 되었습니다.
             </p>
         </li>
         </ul>
@@ -70,7 +70,7 @@
             <h2>✔ I want to be a developer like this.</h2>
             <ul class="timeline"> <!-- 순서없는 리스트 생성 -->
                 <li>
-                    <p>"머릿속 상상이 현실이 된다면 얼마나 행복할까?" 아이디어는 많지만 막상 방법과 기술이 부족했습니다. <br>저는 꼭 "🔥떠오른 아이디어쯤 바로 만드는 개발자🔥"가 되어야 겠다고 마음먹었습니다.</p>
+                    <p>"머릿속 상상이 현실이 된다면 얼마나 행복할까?" 아이디어는 많지만 막상 방법과 기술이 부족했습니다. 저는 꼭 <br>"🔥떠오른 아이디어쯤 바로 만드는 개발자가 되자🔥"고 마음먹었습니다.</p>
                 </li>
         </div>
     </div>
